<?xml version="1.0" encoding="utf-8"?>
<!--
© 2014 Brien Coffield

This file is subject to the terms and conditions defined in
file 'LICENSE.txt', which is part of this source code package.
-->
<resources>

    <string name="about">about</string>
    <string name="about_eyekabob">about eyekabob</string>
    <string name="about_eyekabob_app">Eyekabob is focused on the local community. Our approach to finding live music is unique, as our aim is to stay local using our own databases. We are creating a tool for local bands to post events and a place for the fans to be to able to keep updated on their favorite bands. Find local events at local places and purchase tickets all in one app. Please help us spread eyekabob in your community.</string>
    <string name="about_eyekabob_caps">About Eyekabob</string>
    <string name="about_last_fm">Information regarding Bands, Events, and Venues obtained from Last.fm</string>
    <string name="ad_desc">Advertisement</string>
    <string name="add_artist">Add Artist</string>
    <string name="adding_artist">Adding Artist …</string>
    <string name="advertise">advertise</string>
    <string name="app_name">Eyekabob</string>
    <string name="artist_info_label">Artist</string>
    <string name="artist_detail_label">Artist Detail</string>
    <string name="artist_img_desc">Image for an Artist</string>
    <string name="artist_list">Artists</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="check_back_often">Check back often!</string>
    <string name="checkin_label">Check in</string>
    <string name="checkin_search_label">Nearby Places</string>
    <string name="checkin_shout_hint">Comments about checkin (not required)</string>
    <string name="checking_in">Checking in …</string>
    <string name="choose_genre">Choose a genre</string>
    <string name="city">CITY</string>
    <string name="city_error">Problem with city name</string>
    <string name="contact">contact</string>
    <string name="contact_eyekabob">contact eyekabob</string>
    <string name="description">Description</string>
    <string name="distance">DISTANCE:</string>
    <string name="event_activity">Event</string>
    <string name="event_img_desc">Image for an event</string>
    <string name="event_list">Events</string>
    <string name="eyekabob_version">Eyekabob Version:</string>
    <string name="features_coming_soon">Beta version. More features coming soon!</string>
    <string name="find_live_music">find live music</string>
    <string name="find_music">Find music</string>
    <string name="find_music_button_desc">Find music button</string>
    <string name="genre">Genre</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="gps_warning">Warning: GPS is disabled. Results may be inaccurate</string>
    <string name="home_button_desc">Button on the home page</string>
    <string name="loading">Loading &#8230;</string>
    <string name="miles">miles</string>
    <string name="name">Name</string>
    <string name="no_results">No results found!</string>
    <string name="no_zip_entered">Enter a zip code</string>
    <string name="pipe_char">|</string>
    <string name="preferences">Eyekabob Preferences</string>
    <string name="scaled_img_desc">An image scaled to be the correct horizontal width without stretching</string>
    <string name="search_by_artist">SEARCH BY ARTIST</string>
    <string name="search_by_zip">SEARCH BY ZIP</string>
    <string name="search_by_venue">SEARCH BY VENUE</string>
    <string name="search_live_music">search live music</string>
    <string name="search_live_music_by">search live music by</string>
    <string name="searching">Searching &#8230;</string>
    <string name="select_search_option">Please select a search option</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_in">Signed In</string>
    <string name="submit">Submit</string>
    <string name="upcoming_events">Upcoming Events:</string>
    <string name="use_current_location">USE CURRENT LOCATION</string>
    <string name="venue_info_label">Artist</string>
    <string name="venue_list">Venues</string>
    <string name="venue_list_error">Error while searching for venues</string>
    <string name="view_prototype">View Prototype</string>
    <string name="website_url">Website URL</string>
    <string name="write_email">Write email with:</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="zip_error">Error getting Geo information for zip</string>
</resources>
