<?xml version="1.0" encoding="utf-8"?>
<!--
© 2014 Brien Coffield

This file is subject to the terms and conditions defined in
file 'LICENSE', which is part of this source code package.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <LinearLayout
        android:id="@+id/eyekabobLinks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:padding="10dp">
        <Button
            android:id="@+id/aboutEyekabobButton"
            android:text="@string/about_eyekabob"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"/>

        <TextView
            android:text="@string/pipe_char"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <Button
            android:id="@+id/contactButton"
            android:text="@string/contact_eyekabob"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_live_music_by"
        android:textColor="#8d0000"
        android:textStyle="bold"
        android:textSize="24dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"/>

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/find_by_location_button"
        android:onClick="searchByLocationHandler"
        android:background="@drawable/find_form_bg_med_layout"/>
    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/find_by_artist_button"
        android:onClick="searchByArtistHandler"
        android:background="@drawable/find_form_bg_med_layout"/>
    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/find_by_venue_button"
        android:onClick="searchByVenueHandler"
        android:background="@drawable/find_form_bg_med_layout"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/logoView"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
            android:layout_marginBottom="5dp"
            android:src="@drawable/eyekabob_logo_small" />
        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adUnitId="a1500dd36468af5"
            ads:adSize="BANNER"
            ads:loadAdOnCreate="false"/>
    </LinearLayout>
</LinearLayout>
