<?xml version="1.0" encoding="utf-8"?>
<!--
© 2014 Brien Coffield

This file is subject to the terms and conditions defined in
file 'LICENSE.txt', which is part of this source code package.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_live_music"
        android:textSize="24dp"
        android:textColor="#8d0000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/find_form_bg_layout" >
        <EditText
            android:id="@+id/findByVenueInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:hint="@string/search_by_venue"
            android:singleLine="true" >

        </EditText>

        <ImageButton
            android:id="@+id/findByVenueButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:background="#00000000"
            android:onClick="findByVenueHandler"
            android:src="@drawable/eye_search_button"
            android:contentDescription="@string/find_music_button_desc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/logoView"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
            android:layout_marginBottom="5dp"
            android:src="@drawable/eyekabob_logo_small" />
        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adUnitId="a1500dd36468af5"
            ads:adSize="BANNER"
            ads:loadAdOnCreate="false"/>
    </LinearLayout>

</LinearLayout>
