<?xml version="1.0" encoding="utf-8"?>
<!--
 © 2014 Brien Coffield

 This file is subject to the terms and conditions defined in
 file 'LICENSE.txt', which is part of this source code package.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/findMusicButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#00000000"
        android:src="@drawable/find_music_button"
        android:onClick="findMusicHandler"
        android:contentDescription="@string/find_music_button_desc" >
    </ImageButton>

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/home_button_desc"
        android:src="@drawable/eyekabob_logo" >
    </ImageButton>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:id="@+id/sixButtons"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:id="@+id/firstRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >
                <ImageButton
                    android:id="@+id/homePicsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:background="#00000000"
                    android:src="@drawable/home_pics_button"
                    android:onClick="homeGalleryHandler"
                    android:contentDescription="@string/home_button_desc" >
                </ImageButton>
                <ImageButton
                    android:id="@+id/homeFriendsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:background="#00000000"
                    android:src="@drawable/home_friends_button"
                    android:onClick="homeStatusHandler"
                    android:contentDescription="@string/home_button_desc" >
                </ImageButton>
                <ImageButton
                    android:id="@+id/homeCheckinButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:background="#00000000"
                    android:src="@drawable/home_checkin_button"
                    android:onClick="homeCheckinHandler"
                    android:contentDescription="@string/home_button_desc" >
                </ImageButton>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/secondRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >
                <ImageButton
                    android:id="@+id/homeSettingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:background="#00000000"
                    android:src="@drawable/home_settings_button"
                    android:onClick="homeSettingsHandler"
                    android:contentDescription="@string/home_button_desc" >
                </ImageButton>
                <ImageButton
                    android:id="@+id/homeBandButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:background="#00000000"
                    android:src="@drawable/home_band_button"
                    android:onClick="homeBandHandler"
                    android:contentDescription="@string/home_button_desc" >
                </ImageButton>
                <ImageButton
                    android:id="@+id/homeForumButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:background="#00000000"
                    android:src="@drawable/home_calendar_button"
                    android:onClick="homeCalendarHandler"
                    android:contentDescription="@string/home_button_desc" >
                </ImageButton>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#C000"
            android:contentDescription="@string/description"
            android:onClick="handleMaskClick" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="#AAA"
            android:text="@string/features_coming_soon" />
    </RelativeLayout>
</LinearLayout>
