<?xml version="1.0" encoding="utf-8"?>
<!--
© 2014 Brien Coffield

This file is subject to the terms and conditions defined in
file 'LICENSE', which is part of this source code package.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:id="@+id/eyekabobLinks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center">
        <Button
            android:id="@+id/findLiveMusicButton"
            android:text="@string/find_live_music"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null" />

        <TextView
            android:text="@string/pipe_char"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <Button
            android:id="@+id/aboutButton"
            android:text="@string/about"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null" />

        <TextView
            android:text="@string/pipe_char"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <Button
            android:id="@+id/contactButton"
            android:text="@string/contact_eyekabob"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="65dp"
        android:layout_below="@+id/eyekabobLinks">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/infoMainHeader"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="24dp"
                android:gravity="left"
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/infoSubHeaderOne"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:gravity="left"
                android:layout_marginLeft="6dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoMainHeader"/>

            <TextView
                android:id="@+id/infoSubHeaderTwo"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:gravity="left"
                android:layout_marginLeft="6dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoSubHeaderOne"/>

            <View
                android:id="@+id/infoDividerLineTop"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_margin="2dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/infoSubHeaderTwo"/>

                <ImageView
                    android:id="@+id/infoImageView"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:adjustViewBounds="true"
                    android:layout_below="@+id/infoDividerLineTop"
                    android:contentDescription="blah">
                </ImageView>

            <View
                android:id="@+id/infoDividerLineBottom"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_margin="2dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/infoImageView"/>

            <Button
                android:id="@+id/infoTicketsButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/buy_tickets"
                android:paddingLeft="5dp"
                android:textColor="#800000"
                android:textSize="20dp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_launcher"
                android:background="@null"
                android:visibility="gone"
                android:layout_below="@+id/infoDividerLineBottom"/>

            <TextView
                android:id="@+id/infoBioHeader"
                android:textColor="#B0B0B0"
                android:textSize="24dp"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoTicketsButton"/>

            <ToggleButton
                android:id="@+id/infoBioToggleButton"
                android:textOff="More Info..."
                android:textOn="Less Info..."
                android:textColor="#B0B0B0"
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:visibility="gone"
                android:layout_below="@+id/infoDividerLineBottom"
                android:layout_toRightOf="@+id/infoBioHeader"/>

            <TextView
                android:id="@+id/infoBioContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:padding="6dp"
                android:layout_below="@+id/infoBioHeader"
                android:visibility="gone"/>

            <LinearLayout
                    android:id="@+id/infoVenueDetails"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/infoBioContent">

                <TextView
                        android:id="@+id/infoEventVenue"
                        android:textColor="@android:color/white"
                        android:layout_below="@+id/venue_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                <TextView
                        android:id="@+id/infoVenueWebsite"
                        android:textColor="@android:color/white"
                        android:layout_below="@+id/eventVenue"
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:id="@+id/infoFutureEventsHeader"
                android:textColor="#B0B0B0"
                android:textSize="24dp"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_marginLeft="6dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoVenueDetails"/>

            <LinearLayout
                android:id="@+id/infoFutureEventsContent"
                android:orientation="vertical"
                android:textSize="16dp"
                android:layout_marginLeft="6dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoFutureEventsHeader"/>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/logoView"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
            android:layout_marginBottom="5dp"
            android:src="@drawable/eyekabob_logo_small" />
        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adUnitId="a1500dd36468af5"
            ads:adSize="BANNER"
            ads:loadAdOnCreate="false"/>
    </LinearLayout>
</RelativeLayout>
